spaces accomodations checkboxes in ReviewModal component, fixes image and text box overflowing containers in Login and ReviewModal components, includes changes in build

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -155,9 +155,15 @@ div.rating p.percentage {
 /* ---------- */
 
 /* ---------- */
-/* Modal      */
+/* Modals     */
 /* ---------- */
 
+/* ----- Review ----- */
+div.ui.checkbox > label {
+  padding-right: 5px;
+}
+
+/* ----- Login ----- */
 i.facebook.icon {
   color: #f7f7f7;
 }
